# cemepi-data-study

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/guias/: configuracao_ambiente.md  logging_padrao.md
docs/notebooks/: estudo-similaridade.md  template_notebook.md
docs/scripts/: auditoria_merge_erros_dados_capa_bronze.md  auditoria_tjsp_capa.md  coleta_PGE_GPDR_tjsp_fase_capa.md  enriquecedor_tjsp_capa_PGE_GPDR.md  silver_PGE_GPDR.md  silver_tjsp_capa.md  template_script.md
docs/src/: template_src.md
docs/src/aggregators/: aggregator_tjsp_capa_PGE_GPDR.md
docs/src/scrapers/: scraper_tjsp_capa_request.md
docs/src/transformers/: transformer_auditoria_tjsp_capa.md  transformer_erros_dados_capa_bronze.md  transformer_json_tjsp_capa.md  transformer_silver_PGE_GPDR.md
notebooks/estudo-scraper-face/: estudo-refatoracao-scraper.ipynb
notebooks/estudo-similarididade/: normalizacao_assuntos.ipynb
notebooks/scripts/: coleta_PGE_GPDR_tjsp_fase_capa.md  estudo_similaridade_PGE_GPDR.md
notebooks/src/scrapers/: scraper_tjsp_capa_request.md
scripts/: auditoria_merge_erros_dados_capa_bronze.py  auditoria_tjsp_capa.py  coleta_PGE_GPDR_tjsp_fase_capa.py  count.py  enriquecedor_tjsp_capa_PGE_GPDR.py  silver_PGE_GPDR.py  silver_tjsp_capa.py
src/aggregators/: aggregator_tjsp_capa_PGE_GPDR.py
src/scrapers/: scraper_tjsp_capa_request.py
src/transformers/: transformer_auditoria_tjsp_capa.py  transformer_erros_dados_capa_bronze.py  transformer_json_tjsp_capa.py  transformer_silver_PGE_GPDR.py
