[project]
name = "cemepi-data-study"
version = "0.1.0"
description = "Projeto de estudo e análise de dados do CEMEPI utilizando Python, Jupyter Notebooks e análise de similaridade"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "pandas>=3.0.2",
]
